--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: c
 
+sudo: required
+dist: trusty
+
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libmsgpack3 libmsgpack-dev libuv0.10
